improved project structure

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,7 +1,6 @@
   <mat-toolbar class="app-toolbar" color="primary">
-    <span style="cursor:pointer" (click)="openWebPage()">VESSL</span>
+    <img style="cursor:pointer" src="assets/logo.png" (click)="openWebPage()">
     <span class="example-spacer"></span>
-    <!-- <button mat-icon-button class="example-icon" *ngIf="isAuthenticated()" routerLink="Profile">Profile</button> -->
     <button mat-icon-button class="example-icon" *ngIf="isAuthenticated()" (click)="logout()">Logout</button>
   </mat-toolbar>
   <menu1-item1></menu1-item1>
