--- a/webapp/src/app/components/images/images.component.html
+++ b/webapp/src/app/components/images/images.component.html
@@ -2,15 +2,17 @@
     <span>Images</span>
 </mat-toolbar>
 <div class="Images">
-    <mat-card class="example-card" *ngFor="let image of images; let i = index">
-        <mat-card-title-group>
-          <mat-card-title>{{image.RepoTags[0]}}</mat-card-title>
-          <mat-card-subtitle>Containers: {{image.Containers}}</mat-card-subtitle>
-        </mat-card-title-group>
-        <mat-card-content>
-        </mat-card-content>
-        <mat-card-actions align="end">
-            <button mat-button (click)="removeImage(image.Id)">Remove Image</button>
-        </mat-card-actions>
-    </mat-card>
+    <span  *ngFor="let image of images; let i = index">
+        <mat-card class="example-card" *ngIf="hideImage(image.RepoTags[0])">
+            <mat-card-title-group>
+                <mat-card-title>{{image.RepoTags[0]}}</mat-card-title>
+                <mat-card-subtitle>Containers: {{image.Containers}}</mat-card-subtitle>
+            </mat-card-title-group>
+            <mat-card-content>
+            </mat-card-content>
+            <mat-card-actions align="end">
+                <button mat-button (click)="removeImage(image.Id)">Remove Image</button>
+            </mat-card-actions>
+        </mat-card>
+    </span>    
 </div>
