--- a/webapp/src/app/navigation/menu1-item1-side1/menu1-item1-side1.component.html
+++ b/webapp/src/app/navigation/menu1-item1-side1/menu1-item1-side1.component.html
@@ -2,7 +2,6 @@
   <span></span>
 </mat-toolbar>
 <mat-selection-list class="selection" color="primary" *ngIf="isAuthenticated()" #options [multiple]="false">
-    <mat-list-option routerLink="Dashboard">Performance</mat-list-option>
     <mat-list-option *ngIf="AppsMenuEnabled()" routerLink="Apps">Apps</mat-list-option>
     <mat-list-option *ngIf="AppsRepMenuEnabled()" routerLink="App-Repository">App Repository</mat-list-option>
     <mat-list-option *ngIf="AppLaunchMenuEnabled()" routerLink="App-Launcher">App Launcher</mat-list-option>
@@ -10,6 +9,7 @@
     <mat-list-option *ngIf="VolumesMenuEnabled()" routerLink="Volumes">Volumes</mat-list-option>
     <mat-list-option *ngIf="NetworksMenuEnabled()" routerLink="Networks">Networks</mat-list-option>
     <mat-list-option *ngIf="SystemMenuEnabled()" routerLink="System">System</mat-list-option>
-    <mat-list-option *ngIf="SettingsMenuEnabled()" routerLink="Settings">Settings</mat-list-option>
     <mat-list-option *ngIf="UsersMenuEnabled()" routerLink="Users">Users</mat-list-option>
+    <mat-list-option *ngIf="SettingsMenuEnabled()" routerLink="Settings">Host Settings</mat-list-option>
+    <mat-list-option routerLink="Dashboard">Host Stats</mat-list-option>
   </mat-selection-list>
