improved ui and performance

--- a/webapp/src/app/components/app-launcher/app-launcher.component.html
+++ b/webapp/src/app/components/app-launcher/app-launcher.component.html
@@ -98,7 +98,7 @@
             </div>
         </mat-card-content>
         <mat-card-actions align="end">
-            <button mat-button (click)="installContainer()" [disabled]="launchButtonDisabled()">Launch App</button>
+            <button mat-button (click)="installContainer()">Launch App</button>
         </mat-card-actions>
     </mat-card>
 </div>
