--- a/webapp/src/app/components/settings/settings.component.css
+++ b/webapp/src/app/components/settings/settings.component.css
@@ -11,7 +11,8 @@
 
 .Interfaces {
     display: inline-grid;
-    grid-template-columns: 400px 400px 400px;
+    margin-top: 30px;
+    grid-template-columns: 400px 400px;
     
   }
 
