--- a/webapp/src/app/components/settings/settings.component.html
+++ b/webapp/src/app/components/settings/settings.component.html
@@ -39,5 +39,13 @@
               </mat-card-actions>
           </mat-card>
       </div>
-  </mat-tab>  
+  </mat-tab>
+  <mat-tab label="Reboot/Shutdown">
+    <section>
+        <div class="example-button-row">
+          <button mat-raised-button color="primary" (click)="restartHostSystem()">Reboot System</button>
+          <button mat-raised-button color="primary" (click)="shutdownHostSystem()">Shutdown System</button>
+        </div>
+    </section>
+</mat-tab> 
 </mat-tab-group>  
