--- a/webapp/src/app/components/app-repository/app-repository.component.html
+++ b/webapp/src/app/components/app-repository/app-repository.component.html
@@ -16,7 +16,7 @@
             <button mat-button [matMenuTriggerFor]="menu">actions</button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="getInfo(template.info_url)">Info</button>
-                <button mat-menu-item (click)="installContainer(template)">Install</button>
+                <button mat-menu-item (click)="installContainer(template)" *ngIf="roleExpert()">Install</button>
               </mat-menu>
           </mat-card-actions>
   </mat-card>
