--- a/webapp/src/app/components/users/users.component.css
+++ b/webapp/src/app/components/users/users.component.css
@@ -19,6 +19,10 @@
     width: 90%;
   }
 
+  .rep-full-width {
+    width: 99%;
+  }
+
   section {
     display: table;
     margin-top: 148px;
@@ -43,7 +47,7 @@
   .bottomline {
     display: table-cell;
     width: 1000px;
-    margin: 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
   }
 
   .lastline {
@@ -52,4 +56,8 @@
 
   .example-margin {
     margin-left: 20px;
+  }
+
+  .checkbox-margin {
+    margin-right: 20px;
   }
