--- a/webapp/src/app/components/users/users.component.html
+++ b/webapp/src/app/components/users/users.component.html
@@ -38,20 +38,20 @@
                 <h4>Select accessible areas:</h4>
             </div>
             <div class="bottomline" *ngIf="roleAdmin()">
-                <!-- <mat-checkbox class="example-margin" color="primary" [disabled]="(user.ID == 'master')" [(ngModel)]="user.Permissions.Dashboard">Dashboard</mat-checkbox> -->
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Apps">Apps</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.AppsRepository">App Repository</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.AppLauncher">App Launcher</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Images">Images</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Volumes">Volumes</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Networks">Networks</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Users">Users</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.System">System</mat-checkbox>
-                <mat-checkbox class="example-margin" color="primary" [(ngModel)]="user.Permissions.Settings">Settings</mat-checkbox>
+                <!-- <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Apps">Apps</mat-checkbox> -->
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.AppsRepository">App Repository</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.AppLauncher">App Launcher</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Images">Images</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Volumes">Volumes</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Networks">Networks</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.System">System</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Users">Users</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Settings">Host Settings</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Dashboard">Host Stats</mat-checkbox>
             </div>
             <div class="lastline" *ngIf="roleAdmin()">
                 <h4>Apps Repository URL:</h4>
-                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-form-field class="rep-full-width" appearance="fill">
                     <mat-label>Apps Repository URL</mat-label>
                     <input matInput placeholder="" [(ngModel)]="user.AppsRepositoryUrl">
                 </mat-form-field>
