--- a/webapp/src/app/components/host-stats/dashboard.component.html
+++ b/webapp/src/app/components/host-stats/dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="app-toolbar">
-    <span>Performance</span>
+    <span>Host Stats</span>
 </mat-toolbar>
 <div class="system" *ngIf="HostStats">
     <mat-card class="cpu-card" *ngIf="HostStats">
