--- a/webapp/src/app/components/host-settings/settings.component.html
+++ b/webapp/src/app/components/host-settings/settings.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="app-toolbar">
-  <span>Settings</span>
+  <span>Host Settings</span>
 </mat-toolbar>
 <mat-tab-group class="tab-group">
     <mat-tab label="Network Settings">
