--- a/webapp/src/app/components/app-repository/app-repository.component.css
+++ b/webapp/src/app/components/app-repository/app-repository.component.css
@@ -4,8 +4,14 @@
     margin-top: 64px;
 }
 
+section {
+  display: table;
+  margin-top: 148px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
 .containersRepo {
-    margin-top: 148px;
     margin-left: 20px;
     display: inline-grid;
     grid-template-columns: 390px 390px 390px;
@@ -18,4 +24,13 @@
     margin-bottom: 50px;
     margin-right: 30px;
     background-color: rgb(225, 238, 247);
+  }
+
+  .example-button-row {
+    display: table-cell;
+    width: 700px;
+  }
+  
+  .mat-button-base {
+    margin: 8px 8px;
   }
