--- a/webapp/src/app/components/app-repository/app-repository.component.html
+++ b/webapp/src/app/components/app-repository/app-repository.component.html
@@ -1,24 +1,37 @@
 <mat-toolbar class="app-toolbar">
   <span>Apps Repository</span>
 </mat-toolbar>
-<div class="containersRepo">
-    <mat-card class="example-card" *ngFor="let template of containersRepo?.templates">
-        <mat-card-title-group>
-          <mat-card-title>{{template.name}} </mat-card-title>
-          <mat-card-subtitle>{{template.description}} </mat-card-subtitle>
-          <img mat-card-sm-image src={{template.logo}} >
-        </mat-card-title-group>
-        <mat-card-content>
-            <p>Platform: {{template.platform}}</p>
-            <p>Default Network: {{template.network}}</p>
-            <p>Categories: {{template.categories}}</p>
-        </mat-card-content>
-        <mat-card-actions align="end">
-            <button mat-button [matMenuTriggerFor]="menu">actions</button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="getInfo(template.info_url)">Info</button>
-                <button mat-menu-item (click)="installContainer(template)" *ngIf="roleVessl_User()">Install</button>
-              </mat-menu>
-          </mat-card-actions>
+<section>
+  <div class="example-button-row">
+    <mat-form-field appearance="standard">
+      <mat-label>Category</mat-label>
+      <mat-select [(ngModel)]="categoryName" disableOptionCentering >
+          <mat-option *ngFor="let category of categories" [value]="category">
+            {{category}}
+          </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="filterCategory(categoryName)">Filter</button>
+  </div>
+</section>
+<div class="containersRepo" *ngIf="containersRepo && selectedCategoryName">
+    <mat-card class="example-card" *ngFor="let template of containersRepo.templates | filter: filterTemplate.bind(this)">
+      <mat-card-title-group>
+        <mat-card-title>{{template.name}} </mat-card-title>
+        <mat-card-subtitle>{{template.description}} </mat-card-subtitle>
+        <img mat-card-sm-image src={{template.logo}} >
+      </mat-card-title-group>
+      <mat-card-content>
+          <p>Platform: {{template.platform}}</p>
+          <p>Default Network: {{template.network}}</p>
+          <p>Categories: {{template.categories}}</p>
+      </mat-card-content>
+      <mat-card-actions align="end">
+          <button mat-button [matMenuTriggerFor]="menu">actions</button>
+          <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="getInfo(template.info_url)">Info</button>
+              <button mat-menu-item (click)="installContainer(template)" *ngIf="roleVessl_User()">Install</button>
+            </mat-menu>
+        </mat-card-actions>
   </mat-card>
 <div>
