--- a/webapp/src/app/components/apps/apps.component.html
+++ b/webapp/src/app/components/apps/apps.component.html
@@ -15,9 +15,8 @@
     <button mat-raised-button color="primary" (click)="getContainers(networkName)">Filter</button>
   </div>
 </section>
-<div class="containers">
-  <span *ngFor="let container of containers">
-  <mat-card class="example-card" *ngIf="hideContainer(container.Names[0])">
+<div class="containers" *ngIf="containers">
+  <mat-card class="example-card" *ngFor="let container of containers | filter: filterContainer.bind(this)">
       <mat-card-title-group>
         <mat-card-title>{{container.Names[0]}}</mat-card-title>
         <mat-card-subtitle>{{container.State}}</mat-card-subtitle>
@@ -39,5 +38,4 @@
             </mat-menu>
         </mat-card-actions>
     </mat-card>
-  </span>
 <div>
