--- a/webapp/src/app/components/apps/apps.component.html
+++ b/webapp/src/app/components/apps/apps.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 <section>
   <div class="example-button-row">
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="fill">
       <mat-label>Network</mat-label>
       <mat-select [(ngModel)]="networkName" disableOptionCentering >
         <mat-option [value]="'All'">All</mat-option>
