--- a/webapp/src/app/components/networks/networks.component.html
+++ b/webapp/src/app/components/networks/networks.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 <section>
     <div class="example-button-row">
-      <mat-form-field appearance="standard" *ngIf="roleExpert()">
+      <mat-form-field appearance="fill" *ngIf="roleExpert()">
         <mat-label>Network Name</mat-label>
         <input matInput placeholder="my-network" [(ngModel)]="networkName">
       </mat-form-field>
