--- a/webapp/src/app/components/login/login.component.html
+++ b/webapp/src/app/components/login/login.component.html
@@ -3,10 +3,10 @@
 </mat-toolbar>
 <div class="Users">
   <mat-card class="example-card">
-      <mat-card-title-group>
+      <mat-card-header>
         <mat-card-title>Log in</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
-      </mat-card-title-group>
+      </mat-card-header>
       <mat-card-content>
           <div class="topline">
               <mat-form-field class="example-full-width" appearance="fill">
