--- a/webapp/src/app/components/apps/apps.component.css
+++ b/webapp/src/app/components/apps/apps.component.css
@@ -1,29 +1,26 @@
-section {
+/* section {
   display: table;
   margin-top: 148px;
   margin-left: 20px;
   margin-bottom: 20px;
-}
+} */
 
 .containers {
-  margin-left: 20px;
-  display: inline-grid;
-  grid-template-columns: 380px 380px 380px;
-  position: absolute;
+  width: calc(100vh - 64px);
 }
 
-.example-card {
+.app-card {
   max-width: 300px;
   max-height: 300px;
-  margin-bottom: 50px;
   background-color: rgb(225, 238, 247);
 }
 
-.example-button-row {
-  display: table-cell;
+.filter-group {
   width: 700px;
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
-.mat-button-base {
-  margin: 8px 8px;
+.mat-button {
+  margin: 10px;
 }
