--- a/webapp/src/app/navigation/nav-menu/nav-menu.component.html
+++ b/webapp/src/app/navigation/nav-menu/nav-menu.component.html
@@ -5,10 +5,16 @@
       [opened]="false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list *ngIf="isAuthenticated()">
-      <a mat-list-item *ngIf="AppsMenuEnabled()" routerLink="Apps" (click)="drawer.toggle()">Apps</a>
-      <a mat-list-item routerLink="Dashboard">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item *ngIf="AppsMenuEnabled()" routerLink="Apps" (click)="drawer.toggle()">Apps</a> 
+      <a mat-list-item *ngIf="AppsRepMenuEnabled()" routerLink="App-Repository" (click)="drawer.toggle()">App Repository</a>
+      <a mat-list-item *ngIf="AppLaunchMenuEnabled()" routerLink="App-Launcher" (click)="drawer.toggle()">App Launcher</a>
+      <a mat-list-item *ngIf="ImagesMenuEnabled()" routerLink="Images" (click)="drawer.toggle()">Images</a>
+      <a mat-list-item *ngIf="VolumesMenuEnabled()" routerLink="Volumes" (click)="drawer.toggle()">Volumes</a>
+      <a mat-list-item *ngIf="NetworksMenuEnabled()" routerLink="Networks" (click)="drawer.toggle()">Networks</a>
+      <a mat-list-item *ngIf="SystemMenuEnabled()" routerLink="System" (click)="drawer.toggle()">System</a>
+      <a mat-list-item *ngIf="UsersMenuEnabled()" routerLink="Users" (click)="drawer.toggle()">Users</a>
+      <a mat-list-item *ngIf="HostSettingMenuEnabled()" routerLink="HostSettings" (click)="drawer.toggle()">Host Settings</a>
+      <a mat-list-item *ngIf="HostStatsMenuEnabled()" routerLink="HostStats" (click)="drawer.toggle()">Host Stats</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
